--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
 
-    --cor-de-fundo: #ffffff;
+    --cor-de-fundo: #1d9200;
     --cor-da-letra: #0f0808;
-    --cor-de-destaque: #625f5f;
+    --cor-de-destaque: #ffffff;
 
 
 }
